a1/brendan_gordon/TEST_PROGRAMS/invalidtype/serguei_nevarko/invalid1.min
var x : string;
var x : float;

x = 57.3;

print x;

